objects/PC_Automation_Task__e.object
<CustomObject>
    <description>Object to hold the information related to automation task triggered via support plan</description>
    <fields>
        <fullName>PC_ActionClass__c</fullName>
        <label>Action Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_AutomationTaskType__c</fullName>
        <description>Type of the system triggered task</description>
        <label>Automation Task Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_RunningUser__c</fullName>
        <description>Current user who initiates the system triggered task</description>
        <label>Running User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SourceId__c</fullName>
        <description>The record Id of the object that initiated the system triggered task</description>
        <label>Source Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Source__c</fullName>
        <description>The object which initiated the system triggered task</description>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlanActivityId__c</fullName>
        <description>Support Plan Activity for the Action being executed</description>
        <label>Support Plan Activity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SupportPlanRuntimeId__c</fullName>
        <description>Support Plan Runtime in which current Activity is being executed</description>
        <label>Support Plan Runtime Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TaskConfiguration__c</fullName>
        <description>Configuration details of the system triggered task</description>
        <label>Task Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_TaskId__c</fullName>
        <label>Task Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_TransactionId__c</fullName>
        <description>Unique ID generated for each transaction when Support Plan is initiated</description>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Automation Task</label>
    <pluralLabel>Automation Task</pluralLabel>
</CustomObject>